--- a/appengine/flexible/mailgun/composer.json
+++ b/appengine/flexible/mailgun/composer.json
@@ -1,9 +1,9 @@
 {
     "require": {
         "silex/silex": "^1.3",
-        "mailgun/mailgun-php": "~2.0",
-        "php-http/guzzle6-adapter": "^1.0",
-        "symfony/yaml": "^3.1"
+        "symfony/yaml": "^3.1",
+        "mailgun/mailgun-php": "^2.1",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
         "symfony/browser-kit": "^3.0",
